--- a/index.html
+++ b/index.html
@@ -1,12 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Головна</title>
+   <meta charset="UTF-8">
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="stylesheet" href='css/style.css'>
+   <title>Контрольна робота</title>
 </head>
 <body>
-    
+   <h1>Контрольна робота</h1>
+   <h2>Федіва Станіслава Романовича</h2>
+   <h3>Варіант 1</h3>
+   <div class="blocs">
+      <div class="bloc-1">
+         <h3 class="zag" id="z1">Текст</h3>
+         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex quam provident officia dolore officiis molestiae delectus non impedit numquam maiores. Ducimus quod dolore sit labore consequuntur veritatis voluptate itaque laboriosam.</p>
+      </div>
+      <div class="bloc-2">
+         <h3 class="zag" id="z2">Список</h3>
+         <ol>
+            <li>Хліб</li>
+            <li>Масло</li>
+            <li>Мінеральна вода</li>
+            <li>Крупи:
+               <ul>
+                  <li>Гречка</li>
+                  <li>Рис</li>
+                  <li>Манка</li>
+               </ul>
+            </li>
+            <li>Макарони</li>
+         </ol>
+      </div>
+      <div class="bloc-3">
+         <h3 class="zag" id="z3">Таблиця</h3>
+         <table>
+            <tr>
+               <th>Країна</th>
+               <th>Населення</th>
+            </tr>
+            <tr>
+               <td>Німеччина</td>
+               <td>83,02 млн. ос.</td>
+            </tr>
+            <tr>
+               <td>Чехія</td>
+               <td>10,69 млн. ос.</td>
+            </tr>
+            <tr>
+               <td>Франція</td>
+               <td>66,8 млн. ос.</td>
+            </tr>
+            <tr>
+               <td>Бельгія</td>
+               <td>11,46 млн. ос.</td>
+            </tr>
+         </table>
+      </div>
+      <div class="bloc-4">
+         <h3 class="zag" id="z4">Зображення</h3>
+         <img src="320x240.png" alt="320×240">
+      </div>
+
+      <a href="https://place-hold.it/320x240.png&text=320%C3%97240" target="_blank">Посилання на зображення</a>
+   </div>
 </body>
 </html>
