--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
    <h2>Федіва Станіслава Романовича</h2>
    <h3>Варіант 1</h3>
    <div class="blocs">
-      <div class="bloc-1">
+      <div class="bloc-1 col-lg-3 col-md-4 col-sd-12">
          <h3 class="zag" id="z1">Текст</h3>
          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex quam provident officia dolore officiis molestiae delectus non impedit numquam maiores. Ducimus quod dolore sit labore consequuntur veritatis voluptate itaque laboriosam.</p>
       </div>
-      <div class="bloc-2">
+      <div class="bloc-2 col-lg-3 col-md-4 col-sd-12">
          <h3 class="zag" id="z2">Список</h3>
          <ol>
             <li>Хліб</li>
@@ -32,7 +32,7 @@
             <li>Макарони</li>
          </ol>
       </div>
-      <div class="bloc-3">
+      <div class="bloc-3 col-lg-3 col-md-4 col-sd-12">
          <h3 class="zag" id="z3">Таблиця</h3>
          <table>
             <tr>
@@ -57,7 +57,7 @@
             </tr>
          </table>
       </div>
-      <div class="bloc-4">
+      <div class="bloc-4 col-lg-3 col-md-12 col-sd-12">
          <h3 class="zag" id="z4">Зображення</h3>
          <img src="320x240.png" alt="320×240">
       </div>
