--- a/index.html
+++ b/index.html
@@ -57,12 +57,13 @@
             </tr>
          </table>
       </div>
-      <div class="bloc-4 col-lg-3 col-md-12 col-sd-12">
-         <h3 class="zag" id="z4">Зображення</h3>
-         <img src="320x240.png" alt="320×240">
-      </div>
-
-      <a href="https://place-hold.it/320x240.png&text=320%C3%97240" target="_blank">Посилання на зображення</a>
+   <div class="bloc-4 col-lg-3 col-md-12 col-sd-12">
+      <h3 class="zag" id="z4">Зображення</h3>
+      <img src="320x240.png" alt="420x320">
    </div>
+   </div>
+   
+      <a href="https://place-hold.it/320x240.png&text=320%C3%97240" target="_blank">Посилання на зображення</a>
+
 </body>
 </html>
